[package]
name = "bevy_enum_filter"
version = "0.4.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Filter by enum variant in Bevy queries"
repository = "https://github.com/MrGVSV/bevy_enum_filter"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "enum", "filter", "variant", "query"]
categories = ["game-development"]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*", "screenshots/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0.13", default_features = false }
bevy_ecs = { version = "0.13", default_features = false }
bevy_enum_filter_derive = { path = "./bevy_enum_filter_derive", version = "0.1.0" }

[dev-dependencies]
bevy = "0.13"

[[example]]
name = "filtering"
path = "./examples/filtering.rs"

[[example]]
name = "importing"
path = "./examples/importing.rs"

[[example]]
name = "toggle"
path = "./examples/toggle.rs"